# ansgram

./: .gitignore  README.md  pyproject.toml
ansgram/: cfg.py  cli.py
ansgram/dialogs/dialogs/: reg.py
ansgram/dialogs/dialogs/answer/: dialog.py  sg.py
ansgram/dialogs/dialogs/main_menu/: dialog.py  sg.py
ansgram/dialogs/dialogs/main_menu/wins/: wins.py
ansgram/dialogs/dialogs/main_menu/wins/widgets/: btns.py  texts.py
ansgram/dialogs/dialogs/question/: dialog.py  sg.py
ansgram/dialogs/dialogs/question/wins/: wins.py
ansgram/dialogs/dialogs/question/wins/widgets/: btns.py  inputs.py  radio.py  text.py
ansgram/dialogs/dialogs/search/: dialog.py  sg.py
ansgram/dialogs/dialogs/search/wins/: wins.py
ansgram/dialogs/dialogs/search/wins/widgets/: inputs.py  multiselects.py  texts.py
ansgram/dialogs/dialogs/search/wins/widgets/btns/: categories.py  (+1 more)
ansgram/dialogs/dialogs/settings/: dialog.py  sg.py
ansgram/dialogs/dialogs/settings/wins/: wins.py
ansgram/dialogs/dialogs/settings/wins/widgets/: btns.py  counters.py  inputs.py  multiselects.py  texts.py
ansgram/dialogs/handlers/: reg.py
ansgram/dialogs/handlers/handlers/: start.py
ansgram/dialogs/widgets/: items.py
ansgram/dialogs/widgets/widgets/: btns.py  counters.py  multiselects.py  navs.py  radio.py  texts.py
ansgram/middlewares/: reg.py
ansgram/middlewares/middlewares/: db.py  log.py
ansgram/models/: __init__.py  subjects.py
ansgram/models/orm/: __init__.py  answer.py  base.py  description.py  question.py  subject.py  user.py
ansgram/services/repo/: __init__.py  base.py  user.py
