[tool.poetry]
name        = "ansgram"
version     = "1.0"
description = ""
authors     = ["fwarcis <fwarcis@gmail.com>"]
readme      = "README.md"


[tool.poetry.dependencies]
python         = "^3.11"
aiogram        = "^3.1.1"
aiogram-dialog = "^2.0.0"
aiosqlite      = "^0.19.0"
sqlalchemy     = "^2.0.21"
structlog      = "^23.1.0"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
